# iointel

./: .coverage  .gitignore  2025-07-21-SLA-claude-work.txt  CHANGELOG.md  Makefile  README.md  TEST_REORGANIZATION.md  context_tree.json  creds.env.example  demo_workflow_api.py  demo_workflow_conversions.py  demo_workflow_end_to_end.py  demonstrate_proper_usage.py  demonstrate_smart_test_system.py  directory_listing.csv  docker-compose.yml  main.py  migration_analysis.jso  migration_log.json  pyproject.toml  pytest.ini  reminders_tree.json  requirements.txt  rl_model_report.csv  routing_ontology.md  run_unified_tests.py  run_workflow_rag_service.py  runner  saved_context_tree.json  setup.py  start_fresh_unified_conversations.py  test-runner  test_agent_creation_from_spec.py  test_analytics_demo.py  test_conversations.db  test_data_source_confusion.py  test_dynamic_gradio_ui.py  test_organization_summary.md  test_route_index.py  test_semantic_rag.py  (+6 more)
.github/workflows/: auto-reviewers.yaml  automerge.yaml  codeql.yaml  release.yaml  test-coverage.yml  tests.yaml  validate-and-test.yml
agent_council/: .gitignore  README.md  agent-server.ipynb  agent_flows.py  agents.py  api.py  datamodels.py  models.py  requirements.txt  test.py  tools.py
agent_council/agents/: agents.py
agent_council/api/: api.py
agent_council/flows/: agent_flows.py
agent_council/tools/: tools.py
codex/: README.md  README_grassmannian.md  agno_tools_and_hydration_issues.md  architecture.md  centralized_workflow_testing_system.md  dependencies.md  linting_and_formatting.md  project_overview.md  quantum_grassmannian.py  quantum_grassmannian2.py  quantum_grassmannian2_optuna.py  quantum_grassmannian_analysis.md  quantum_grassmannian_datasets_demo.py  run_grassmannian.py  task_executor_registry_fix.md  tool_registry_refactor_plan.md  typed_dataflow_architecture.md  unified_test_system_architecture.md  validation_systems_todo.md  workflow-ontology-mismatch.md  workflow-planner-architecture.md  workflow_data_flow_safety_todo.md  workflow_execution_complete_architecture.md  workflow_execution_design_flaws.md  workflow_planner_design.md  workflow_test_alignment_system.md
demo_test_repository/agentic/: 3b4ce545-9d18-4ba0-9acd-f4274aabcbce.json
demo_test_repository/logical/: 7b9bef21-8a7b-4883-8c64-4cdabad7711d.json
demo_test_repository/orchestration/: stock-trading-sla-test.json
docs/: tool_usage_enforcement_methodology.md
examples/: demo_logging_output.py  demo_workflow_api.py  demo_workflow_end_to_end.py  demonstrate_proper_usage.py  demonstrate_smart_test_system.py  demonstrate_test_execution.py  workflow_planner_example.py
framework/: __init__.py  agents.py  code_parser.py  db.py  requirements.txt  sandbox.py
framework/client/: client.py
framework/src/: agents.py  handlers.py  memory.py  sandbox.py  task.py  tasks.py  workflow.py  workflows.py
iointel/: __init__.py
iointel/client/: client.py
iointel/src/: agents.py  chainables.py  constants.py  magic.py  memory.py  sandbox.py  simple_conversation.py  task.py  workflow.py
mock-api/: README.MD  docker-compose.yml
saved_prompt_collections/: 06d1589c-b5ff-4f69-8c11-9fb5ed285581.json  0806268b-ba7d-4c65-a279-4ebae6e02d44.json  0a973c03-b26f-47f2-9cc1-2bbbe3b95091.json  19d2f293-9fd6-4927-9df5-2c3f946cd8fd.json  1af42c38-d3bb-4eae-9f38-f8354bcf295d.json  3ac27081-71b9-4865-93e7-b8f94e11e3ff.json  7cca2c47-69da-43f1-abb6-13636a0d7f40.json  883a847c-5b8d-4be1-85b2-9e2650dfabb8.json  ac8363b2-d647-4a14-8a33-427ceed75bbe.json  d460f22a-fd75-40a3-ae47-95f096a7e8d8.json
scripts/: migrate_tests_to_centralized.py  populate_test_repository.py
scripts/migrations/: migrate_saved_workflows.py  migrate_semantic_types.py  migrate_tool_to_data_source.py
scripts/utilities/: check_registry_state.py  fix_agent_instructions.py
tests/: MIGRATION_ROADMAP.md  conftest.py  migration_guide.md  test_agent_creation_from_spec.py  test_agent_multimodal.py  test_agent_routing_gate.py  test_agents.py  test_centralized_workflow_testing.py  test_client.py  test_comprehensive_workflow_coverage.py  test_conditional_dag_termination.py  test_conversation_memory.py  test_conversion_utils.py  test_decision_tools.py  test_enhanced_tool_catalog.py  test_execution_environment_critical_issues.py  test_execution_environment_equivalence.py  test_kwargs_handling.py  test_multimodal.py  test_new_repository.py  test_new_workflow_spec.py  test_riddle_whisper_workflow.py  test_simple_routing.py  test_stages.py  test_tasks.py  test_workflow_api.py  test_workflow_cli.py  test_workflow_converter.py  test_workflow_planner.py  test_workflow_routing_validation.py  test_workflow_spec.py  test_workflow_spec_conversions.py  test_workflow_web_api.py  test_workflows.py
tests/agents/: test_agent_data_flow_fix.py  test_llama_agent.py  test_llama_simple.py  test_llama_workflow_planner.py  test_working_agno_agent.py
tests/diagnostics/: test_self_parameter_leak.py  test_tool_instance_diagnosis.py
tests/execution/: test_dag_debug.py  test_dag_execution_flow.py  test_dag_fix.py  test_diamond_typed_execution.py  test_diamond_workflow.py  test_simple_dag.py  test_skip_propagation_fix.py  test_typed_data_flow.py  test_typed_execution.py
tests/fixtures/: workflow_test_fixtures.py
tests/integration/: test_chat_feature_integration.py  test_decision_prompt_injection.py  test_full_dag_sla_enforcement.py  test_full_system_fixes.py  test_unified_fixes.py
tests/integrations/: test_collection_api_integration.py  test_collection_ui_integration.py  test_data_flow_comprehensive.py  test_exact_scenario.py  test_final_fix.py  test_integrated_dag.py
tests/routing/: test_conditional_routing_dag.py  test_conditional_routing_focused.py  test_decision_routing_new.py  test_dual_routing.py  test_negative_routing.py  test_positive_routing.py  test_routing_gate.py  test_routing_scenarios.py
tests/sla/: test_complete_sla_system.py  test_flexible_sla_demo.py
tests/test_tools_isolated/: test_calculator.py  test_coinmarketcap.py  test_csv.py  test_duckduckgo.py  test_email.py  test_firecrawl_tool.py  (+3 more)
(+359 files in other folders)
