[project]
name = "agents-framework"
dynamic = ["version"]
description = "A framework to create agents, tasks, and workflows."
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "pydantic>=2.10.3",
    # controlflow-0.12.0 is not yet released to pypi, use github instead
    # v0.12.0 has broken pyproject.toml, so take from our fork :/
    "controlflow@git+https://github.com/webcoderz/ControlFlow#egg=bf63a7f6f90ab3c61ace2afc35a7199a1e8511fa",
    "docker>=7.1.0",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.1",
    "python-dotenv>=1.0.1",
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "pytest>=8.3.4",
    "python-multipart>=0.0.20",
    "sqlalchemy-utils>=0.41.2",
    "pgvector>=0.3.6",
    "solders>=0.23.0",
    "solana>=0.36.2",
    "langchain-core>=0.3.28",
]
keywords = ["Agents", "LLM", "framework", "AI", "tools"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
]

testpaths = ["tests"]

[tool.pytest.ini_options]
timeout = 120
asyncio_mode = "auto"
norecursedirs = [
    "*.egg-info",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".vscode",
    "node_modules",
]
env = [
    "D:OPENAI_API_KEY",
    "D:TUNNEL_PASS"
]

[project.optional-dependencies]
tests = [
    "pytest-asyncio>=0.18.2,!=0.22.0,<0.23.0",
    "pytest-env>=0.8,<2.0",
    "pytest-rerunfailures>=10,<14",
    "pytest-sugar>=0.9,<2.0",
    "pytest>=7.0",
    "pytest-timeout",
    "pytest-xdist",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["framework"]

[tool.hatch.version]
path = "framework/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true
